// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as a div 1`] = `
<div
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root root testClass MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <span
    className="MuiTouchRipple-root"
  />
</div>
`;

exports[`renders correctly 1`] = `
<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root root testClass MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
/>
`;
